@@ -23,6 +23,9 @@
 	image using the printable width instead of the page
 	width.
 
+	<LI>HTMLDOC should now compile out-of-the-box using the
+	Cygwin tools.
+
 	<H3>Bug Fixes</H3>
 
 	<LI>"make install" didn't work in the fonts directory.
